--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <main>
         <h2>Te haz ganado un premio</h2>
         <p>Ve al pasillo del 1800 a reclamarlo</p>
+        <p>Que no se te olvide agarrar la hoja del QR y entregarlo</p>
         <div class="gif">
             <img src="https://media.tenor.com/52M2P0XtgQUAAAAi/roblox-dance.gif" alt="emotiza">
         </div> 
