--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 <body>
     <header>
         <nav><img src="./Multimedia/HolaMundoImg.jpg" alt="Hola Mundo Planilla"></nav>
-        <h1>¡Enhorabuena!</h1>
+        <h1>¡Hola!</h1>
     </header>
     <main>
-        <h2>Te haz ganado un premio</h2>
-        <p>Ve al pasillo del 1800 a reclamarlo</p>
-        <p>Que no se te olvide agarrar la hoja del QR y entregarlo</p>
+        <h2>Top 3 razones para votar por Hola mundo</h2>
+        <h3>Número 1</h3>
+        <p>Vamos a organizar viajes a empresas en México para conocer un poco más sobre el ambiente laboral</p>
+        <h3>Número 2</h3>
+        <p>Daremos cursos de temas de interés para los estudiantes</p>
+        <h3>Número 3</h3>
+        <p>Iremos a Hackathones y planearemos fiestas a lo largo del semestre</p>
+        
         <div class="gif">
             <img src="https://media.tenor.com/52M2P0XtgQUAAAAi/roblox-dance.gif" alt="emotiza">
         </div> 
     </main>
     <footer>
-        <p>Vota por Hola Mundo</p>
+        <p><a href="https://www.instagram.com/planillaholamundo?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">
+            @planillaholamundo
+        </a></p>
     </footer>
     
 </body>
