--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <h2>Top 3 razones para votar por Hola mundo</h2>
         <h3>Número 1</h3>
-        <p>Vamos a organizar viajes a empresas en México para conocer un poco más sobre el ambiente laboral</p>
+        <p>Vamos a organizar viajes a empresas y eventos en México para conocer un poco más sobre el ambiente laboral</p>
         <h3>Número 2</h3>
         <p>Daremos cursos de temas de interés para los estudiantes</p>
         <h3>Número 3</h3>
