--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h2>Top 3 razones para votar por Hola mundo</h2>
         <h3>Número 1</h3>
         <p>Vamos a organizar viajes a empresas y eventos en México para conocer un poco más sobre el ambiente laboral y la carrera</p>
-        <p>Tales como <a href="https://www.talent-land.mx/" target="_blank" rel="noopener noreferrer">Talent Land</a> en Jalisco o <a href="https://www.spaceappschallenge.org/nasa-space-apps-2024/2024-local-events/hermosillo/" target="_blank" rel="noopener noreferrer">Space app challenge</a> en hermosillo</p>
+        <p>Tales como <a href="https://www.talent-land.mx/" target="_blank" rel="noopener noreferrer">Talent Land</a> en Jalisco o <a href="https://www.spaceappschallenge.org/nasa-space-apps-2024/2024-local-events/hermosillo/" target="_blank" rel="noopener noreferrer">Space apps challenge</a> en hermosillo</p>
         <h3>Número 2</h3>
         <p>Daremos cursos de temas de interés para los estudiantes</p>
         <h3>Número 3</h3>
